ir/tests/snapshots/grammar_json_snapshots__grammar_with_all_symbol_types.snap
---
source: ir/tests/grammar_json_snapshots.rs
expression: grammar_json(&grammar)
---
{
  "name": "all_symbols",
  "rules": {
    "1": [
      {
        "lhs": 1,
        "rhs": [
          {
            "Terminal": 2
          },
          {
            "NonTerminal": 6
          },
          {
            "External": 5
          },
          {
            "Optional": {
              "Terminal": 3
            }
          },
          {
            "Repeat": {
              "Terminal": 4
            }
          },
          {
            "RepeatOne": {
              "Terminal": 2
            }
          },
          {
            "Choice": [
              {
                "Terminal": 3
              },
              {
                "Terminal": 4
              }
            ]
          },
          {
            "Sequence": [
              {
                "Terminal": 2
              },
              {
                "Terminal": 3
              }
            ]
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      }
    ],
    "6": [
      {
        "lhs": 6,
        "rhs": [
          "Epsilon"
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 1
      }
    ]
  },
  "tokens": {
    "2": {
      "name": "A",
      "pattern": {
        "String": "a"
      },
      "fragile": false
    },
    "3": {
      "name": "B",
      "pattern": {
        "String": "b"
      },
      "fragile": false
    },
    "4": {
      "name": "C",
      "pattern": {
        "String": "c"
      },
      "fragile": false
    }
  },
  "precedences": [],
  "conflicts": [],
  "externals": [
    {
      "name": "EXT",
      "symbol_id": 5
    }
  ],
  "extras": [],
  "fields": {},
  "supertypes": [],
  "inline_rules": [],
  "alias_sequences": {},
  "production_ids": {},
  "max_alias_sequence_length": 0,
  "rule_names": {
    "1": "start",
    "6": "inner"
  },
  "symbol_registry": null,
  "word_token": null,
  "lexical_metadata": {},
  "start_symbol": null,
  "wrapper_token_relations": {}
}
